# WXMUSICPLAYER

./: .gitignore  CMakeLists.txt  CMakeLists_static.txt  DLL_问题解决指南.md  LICENSE  Linux字体显示解决方案.md  README.md  UTF8_GBK_解决方案.md  appimage.yml  build.bat  build_compatible.sh  build_font_test.sh  build_linux.sh  build_no_fuse.sh  build_simple.bat  build_simple_static.bat  build_static.bat  copy_all_dlls.bat  debug_appimage.sh  fix_dll_issues.bat  fix_dll_issues.ps1  fix_ubuntu_fonts.sh  run_linux.sh  run_with_dlls.bat  test_build_local.sh  test_fonts.cpp  修复中文显示.md  安装指南.md
.github/workflows/: build-appimage.yml  build-linux-appimage.yml  build-linux-multi.yml  build-simple.yml
assets/: sample_audio_info.txt
src/: AdvancedAudioPlayer.h  AudioPlayer.cpp  AudioPlayer.h  MusicPlayerFrame.cpp  MusicPlayerFrame.h  SimpleMusicPlayer.cpp  main.cpp
